Servel.NET/Assets/css/common.css
* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  box-sizing: border-box;
  font-family: system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  line-height: 1.4;
}

body {
  padding: 0;
  min-height: 100vh;
  font-size: 16px;
  user-select: none;
  touch-action: none;
}

.default-hidden {
  display: none;
}

.text-selectable {
  user-select: text;
}

a {
  text-decoration: none;
}

a:hover, a:focus, a:active {
  text-decoration: underline;
}

